@@ -7,8 +7,8 @@ import io.metersphere.base.domain.*;
 import io.metersphere.base.mapper.*;
 import io.metersphere.base.mapper.ext.ExtTestCaseMapper;
 import io.metersphere.base.mapper.ext.ExtTestCaseNodeMapper;
-import io.metersphere.base.mapper.ext.ExtTestCaseReviewTestCaseMapper;
 import io.metersphere.base.mapper.ext.ExtTestPlanTestCaseMapper;
+import io.metersphere.base.mapper.ext.ExtTestReviewCaseMapper;
 import io.metersphere.commons.constants.TestCaseConstants;
 import io.metersphere.commons.exception.MSException;
 import io.metersphere.commons.utils.BeanUtils;
@@ -22,16 +22,19 @@ import io.metersphere.log.vo.DetailColumn;
 import io.metersphere.log.vo.OperatingLogDetails;
 import io.metersphere.log.vo.api.ModuleReference;
 import io.metersphere.service.NodeTreeService;
+import io.metersphere.service.ProjectService;
 import io.metersphere.track.dto.TestCaseDTO;
 import io.metersphere.track.dto.TestCaseNodeDTO;
 import io.metersphere.track.dto.TestPlanCaseDTO;
 import io.metersphere.track.request.testcase.*;
 import io.metersphere.track.request.testplancase.QueryTestPlanCaseRequest;
+import io.metersphere.track.request.testreview.QueryCaseReviewRequest;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.ibatis.session.ExecutorType;
 import org.apache.ibatis.session.SqlSession;
 import org.apache.ibatis.session.SqlSessionFactory;
 import org.mybatis.spring.SqlSessionUtils;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
@@ -63,11 +66,12 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
     @Resource
     ProjectMapper projectMapper;
     @Resource
-    TestCaseReviewTestCaseMapper testCaseReviewTestCaseMapper;
-    @Resource
-    ExtTestCaseReviewTestCaseMapper extTestCaseReviewTestCaseMapper;
-    @Resource
     TestCaseReviewMapper testCaseReviewMapper;
+    @Resource
+    ExtTestReviewCaseMapper extTestReviewCaseMapper;
+    @Lazy
+    @Resource
+    ProjectService projectService;
 
     public TestCaseNodeService() {
         super(TestCaseNodeDTO.class);
@@ -138,79 +142,40 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
             testCaseNodeMapper.insert(record);
             record.setCaseNum(0);
             return record;
-        }else {
+        } else {
             return list.get(0);
         }
     }
+
     public List<TestCaseNodeDTO> getNodeTreeByProjectId(String projectId) {
-        QueryTestCaseRequest request = new QueryTestCaseRequest();
-        return getNodeTreeByProjectId(projectId, request);
+        return getNodeTreeByProjectId(projectId, new QueryTestCaseRequest());
     }
 
     public List<TestCaseNodeDTO> getNodeTreeByProjectId(String projectId, QueryTestCaseRequest request) {
         // 判断当前项目下是否有默认模块，没有添加默认模块
         this.getDefaultNode(projectId);
-        List<TestCaseNodeDTO> testCaseNodes = extTestCaseNodeMapper.getNodeTreeByProjectId(projectId);
-        request.setUserId(SessionUtils.getUserId());
         request.setProjectId(projectId);
-
-        //优化：将for循环内的SQL抽出来，只差一次
-        List<String> allModuleIdList = new ArrayList<>();
-        for (TestCaseNodeDTO node : testCaseNodes) {
-            List<String> moduleIds = new ArrayList<>();
-            moduleIds = this.nodeList(testCaseNodes, node.getId(), moduleIds);
-            moduleIds.add(node.getId());
-            for (String moduleId : moduleIds) {
-                if(!allModuleIdList.contains(moduleId)){
-                    allModuleIdList.add(moduleId);
-                }
-            }
-        }
-        request.setModuleIds(allModuleIdList);
-        List<Map<String,Object>> moduleCountList = extTestCaseMapper.moduleCountByCollection(request);
-        Map<String,Integer> moduleCountMap = this.parseModuleCountList(moduleCountList);
-        testCaseNodes.forEach(node -> {
-            List<String> moduleIds = new ArrayList<>();
-            moduleIds = this.nodeList(testCaseNodes, node.getId(), moduleIds);
-            moduleIds.add(node.getId());
-            int countNum = 0;
-            for (String moduleId : moduleIds) {
-                if(moduleCountMap.containsKey(moduleId)){
-                    countNum += moduleCountMap.get(moduleId).intValue();
-                }
-            }
-            node.setCaseNum(countNum);
-        });
-        return getNodeTrees(testCaseNodes);
+        request.setUserId(SessionUtils.getUserId());
+        List<TestCaseNodeDTO> countMNodes = extTestCaseMapper.getCountNodes(request);
+        List<TestCaseNodeDTO> testCaseNodes = extTestCaseNodeMapper.getNodeTreeByProjectId(projectId);
+        return getNodeTrees(testCaseNodes, getCountMap(countMNodes));
     }
 
     private Map<String, Integer> parseModuleCountList(List<Map<String, Object>> moduleCountList) {
-        Map<String,Integer> returnMap = new HashMap<>();
-        for (Map<String, Object> map: moduleCountList){
+        Map<String, Integer> returnMap = new HashMap<>();
+        for (Map<String, Object> map : moduleCountList) {
             Object moduleIdObj = map.get("moduleId");
             Object countNumObj = map.get("countNum");
-            if(moduleIdObj!= null && countNumObj != null){
+            if (moduleIdObj != null && countNumObj != null) {
                 String moduleId = String.valueOf(moduleIdObj);
                 try {
-                    Integer countNumInteger = new Integer(String.valueOf(countNumObj));
-                    returnMap.put(moduleId,countNumInteger);
-                }catch (Exception e){
+                    Integer countNumInteger = Integer.valueOf(String.valueOf(countNumObj));
+                    returnMap.put(moduleId, countNumInteger);
+                } catch (Exception e) {
                 }
             }
         }
         return returnMap;
-    }
-
-    public static List<String> nodeList(List<TestCaseNodeDTO> testCaseNodes, String pid, List<String> list) {
-        for (TestCaseNodeDTO node : testCaseNodes) {
-            //遍历出父id等于参数的id，add进子节点集合
-            if (StringUtils.equals(node.getParentId(), pid)) {
-                list.add(node.getId());
-                //递归遍历下一级
-                nodeList(testCaseNodes, node.getId(), list);
-            }
-        }
-        return list;
     }
 
     public int editNode(DragNodeRequest request) {
@@ -235,6 +200,7 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
 
     /**
      * 修改用例的 nodePath
+     *
      * @param editNodeIds
      * @param projectId
      */
@@ -263,9 +229,9 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
     }
 
     private List<String> selectCaseIdByNodeIds(List<String> nodeIds) {
-        if(CollectionUtils.isEmpty(nodeIds)){
-            return  new ArrayList<>();
-        }else {
+        if (CollectionUtils.isEmpty(nodeIds)) {
+            return new ArrayList<>();
+        } else {
             return extTestCaseMapper.selectIdsByNodeIds(nodeIds);
         }
     }
@@ -278,7 +244,6 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
      * @return List<TestCaseNodeDTO>
      */
     public List<TestCaseNodeDTO> getNodeByQueryRequest(QueryTestPlanCaseRequest request) {
-
         List<TestCaseNodeDTO> list = new ArrayList<>();
         List<String> projectIds = testPlanProjectService.getProjectIdsByPlanId(request.getPlanId());
         projectIds.forEach(id -> {
@@ -300,17 +265,22 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
      * 获取当前计划下
      * 有关联数据的节点
      *
-     * @param planId plan id
+     * @param planId  plan id
+     * @param request 根据查询条件过滤用例数量
      * @return List<TestCaseNodeDTO>
      */
-    public List<TestCaseNodeDTO> getNodeByPlanId(String planId) {
-        List<TestCase> testCases = extTestPlanTestCaseMapper.getTestCaseWithNodeInfo(planId);
-        Map<String, List<String>> projectNodeMap = getProjectNodeMap(testCases);
-        return getNodeTreeWithPruningTree(projectNodeMap);
+    public List<TestCaseNodeDTO> getNodeByPlanId(String planId, QueryTestPlanCaseRequest request) {
+        request.setPlanId(planId);
+        request.setProjectId(null);
+        List<TestCaseNodeDTO> countModules = extTestPlanTestCaseMapper.getTestPlanCountNodes(request);
+        return getNodeTreeWithPruningTree(countModules);
     }
 
-    public List<TestCaseNodeDTO> getPublicNodeByProjectNode(List<TestCaseNodeDTO> projectNodes) {
-        QueryTestCaseRequest request = new QueryTestCaseRequest();
+    public List<TestCaseNodeDTO> getNodeByPlanId(String planId) {
+        return this.getNodeByPlanId(planId, new QueryTestPlanCaseRequest());
+    }
+
+    public List<TestCaseNodeDTO> getPublicNodeByProjectNode(List<TestCaseNodeDTO> projectNodes, QueryTestCaseRequest request) {
         request.setCasePublic(true);
         for (TestCaseNodeDTO dto : projectNodes) {
             List<TestCaseNodeDTO> children = this.getNodeTreeByProjectId(dto.getId(), request);
@@ -322,58 +292,35 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
     }
 
     public List<TestCaseNodeDTO> getNodeByReviewId(String reviewId) {
-        List<TestCase> testCases = extTestCaseReviewTestCaseMapper.getTestCaseWithNodeInfo(reviewId);
-        Map<String, List<String>> projectNodeMap = getProjectNodeMap(testCases);
-        return getNodeTreeWithPruningTree(projectNodeMap);
+        return this.getNodeByReviewId(reviewId, new QueryCaseReviewRequest());
     }
 
-    public List<TestCaseNodeDTO> getNodeTreeWithPruningTree(Map<String, List<String>> projectNodeMap) {
-        List<TestCaseNodeDTO> list = new ArrayList<>();
-        projectNodeMap.forEach((k, v) -> {
-            Project project = projectMapper.selectByPrimaryKey(k);
-            if (project != null) {
-                String name = project.getName();
-                List<TestCaseNodeDTO> testCaseNodes = getNodeTreeWithPruningTree(k, v);
-                TestCaseNodeDTO testCaseNodeDTO = new TestCaseNodeDTO();
-                testCaseNodeDTO.setId(project.getId());
-                testCaseNodeDTO.setName(name);
-                testCaseNodeDTO.setLabel(name);
-                testCaseNodeDTO.setChildren(testCaseNodes);
-                if (!CollectionUtils.isEmpty(testCaseNodes)) {
-                    list.add(testCaseNodeDTO);
-                }
-            }
-        });
-        return list;
+    public List<TestCaseNodeDTO> getNodeByReviewId(String reviewId, QueryCaseReviewRequest request) {
+        request.setReviewId(reviewId);
+        request.setProjectId(null);
+        List<TestCaseNodeDTO> countModules = extTestReviewCaseMapper.getTestReviewCountNodes(request);
+        return getNodeTreeWithPruningTree(countModules);
+    }
+
+    public List<TestCaseNodeDTO> getNodeTreeWithPruningTree(List<TestCaseNodeDTO> countModules) {
+        return getNodeTreeWithPruningTree(countModules, extTestCaseNodeMapper::getNodeTreeByProjectIds);
     }
 
     /**
-     * 获取当前项目下的
-     * @param projectId
-     * @param pruningTreeIds
+     * 生成模块树并剪枝
+     *
      * @return
      */
-    public List<TestCaseNodeDTO> getNodeTreeWithPruningTree(String projectId, List<String> pruningTreeIds) {
-        List<TestCaseNodeDTO> testCaseNodes = extTestCaseNodeMapper.getNodeTreeByProjectId(projectId);
+    public List<TestCaseNodeDTO> getNodeTreeWithPruningTree(List<TestCaseNodeDTO> testCaseNodes, List<String> containIds) {
         List<TestCaseNodeDTO> nodeTrees = getNodeTrees(testCaseNodes);
         Iterator<TestCaseNodeDTO> iterator = nodeTrees.iterator();
         while (iterator.hasNext()) {
             TestCaseNodeDTO rootNode = iterator.next();
-            if (pruningTree(rootNode, pruningTreeIds)) {
+            if (pruningTree(rootNode, containIds)) {
                 iterator.remove();
             }
         }
         return nodeTrees;
-    }
-
-    private Map<String, List<String>> getProjectNodeMap(List<TestCase> testCases) {
-        Map<String, List<String>> projectNodeMap = new HashMap<>();
-        for (TestCase testCase : testCases) {
-            List<String> nodeIds = Optional.ofNullable(projectNodeMap.get(testCase.getProjectId())).orElse(new ArrayList<>());
-            nodeIds.add(testCase.getNodeId());
-            projectNodeMap.put(testCase.getProjectId(), nodeIds);
-        }
-        return projectNodeMap;
     }
 
     private List<TestCaseNodeDTO> getNodeDTO(String projectId, QueryTestPlanCaseRequest request) {
@@ -392,7 +339,8 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
                 .map(TestCase::getNodeId)
                 .collect(Collectors.toList());
 
-        return getNodeTreeWithPruningTree(projectId, dataNodeIds);
+        List<TestCaseNodeDTO> testCaseNodes = extTestCaseNodeMapper.getNodeTreeByProjectId(projectId);
+        return getNodeTreeWithPruningTree(testCaseNodes, dataNodeIds);
     }
 
     public List<TestCaseNodeDTO> getAllNodeByPlanId(QueryNodeRequest request) {
@@ -415,7 +363,6 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
         if (testCaseReview == null) {
             return Collections.emptyList();
         }
-
         return getNodeTreeByProjectId(projectId);
     }
 
@@ -533,8 +480,8 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
     private List<TestCaseDTO> QueryTestCaseByNodeIds(List<String> nodeIds) {
         QueryTestCaseRequest testCaseRequest = new QueryTestCaseRequest();
         testCaseRequest.setNodeIds(nodeIds);
-        if(testCaseRequest.getFilters()!=null && !testCaseRequest.getFilters().containsKey("status")){
-            testCaseRequest.getFilters().put("status",new ArrayList<>(0));
+        if (testCaseRequest.getFilters() != null && !testCaseRequest.getFilters().containsKey("status")) {
+            testCaseRequest.getFilters().put("status", new ArrayList<>(0));
         }
         return extTestCaseMapper.list(testCaseRequest);
     }
@@ -576,10 +523,6 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
         List<TestCaseNode> testCaseNodes = testCaseNodeMapper.selectByExample(example);
         String projectId = testCaseNodes.get(0).getProjectId();
         return projectMapper.selectByPrimaryKey(projectId);
-    }
-
-    private TestCaseNode getCaseNode(String id) {
-        return testCaseNodeMapper.selectByPrimaryKey(id);
     }
 
     @Override
@@ -729,7 +672,7 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
 
         if (org.apache.commons.collections.CollectionUtils.isNotEmpty(testCaseNodes)) {
 
-            for (TestCaseMinderEditRequest.TestCaseNodeMinderEditItem item: testCaseNodes) {
+            for (TestCaseMinderEditRequest.TestCaseNodeMinderEditItem item : testCaseNodes) {
                 if (StringUtils.isBlank(item.getParentId()) || item.getParentId().equals("root")) {
                     item.setParentId(null);
                 }
@@ -759,6 +702,7 @@ public class TestCaseNodeService extends NodeTreeService<TestCaseNodeDTO> {
 
     /**
      * 统计某些节点下的临时节点的数量
+     *
      * @param nodeIds
      * @return
      */
